[package]
edition = "2021"
name = "burrboard-test"
version = "0.1.0"
authors = ["Ulf Lilleengen <lulf@redhat.com>"]
resolver = "2"

[dependencies]
defmt = "0.3"
defmt-rtt = "0.3"
panic-probe = { version = "0.3", features = ["print-defmt"] }

cortex-m = { version = "0.7", features = ["inline-asm"] }
cortex-m-rt = "0.7"

embassy = { version = "0.1.0", default-features = false, features = ["defmt"] }
embassy-nrf = { version = "0.1.0", default-features = false, features = ["nrf52833", "time-driver-rtc1", "gpiote"]}
futures = { version = "0.3", default-features = false }
bitflags = { version = "1.3", default-features = false }

[patch.crates-io]
embassy = { path = "../../../embassy/embassy" }
embassy-nrf = { path = "../../../embassy/embassy-nrf" }
embassy-hal-common = { path = "../../../embassy/embassy-hal-common" }
