[package]
name = "gatt-client"
version = "0.1.0"
authors = ["Ulf Lilleengen <ulf.lilleengen@gmail.com>"]
edition = "2018"
description = "GATT client for burrboard"

[dependencies]

dbus = "0.9.0"
log = "0.4.11"
env_logger = "0.8.2"
envconfig = "0.9.1"
serde_json = "1.0"
reqwest = { version = "0.10", features = ["blocking"] }
