[package]
name = "gatt-client"
version = "0.1.0"
authors = ["Ulf Lilleengen <ulf.lilleengen@gmail.com>"]
edition = "2018"
description = "GATT client for burrboard"

[dependencies]

uuid = { version = "0.8", features = ["v4"] }
clap = { version = "3.0", features = ["derive"] }
bluer = "0.13"
tokio = { version = "1", features = ["full"] }
log = "0.4.11"
serde_json = "1.0"
stderrlog = "0.4"
futures = "0.3"
