[package]
edition = "2021"
name = "burrboard-firmware"
version = "0.1.0"
authors = ["Ulf Lilleengen <lulf@redhat.com>"]
resolver = "2"

[dependencies]
defmt = { version = "0.3", optional = true }
defmt-rtt = { version = "0.3", optional = true }
panic-probe = { version = "0.3", features = ["print-defmt"], optional = true }

# For uart logging
log = { version = "0.4", optional = true }
panic-reset = { version = "0.1.1", optional = true }

cortex-m = { version = "0.7", features = ["inline-asm"] }
cortex-m-rt = "0.7"

embassy = { version = "0.1.0", default-features = false }
embassy-nrf = { version = "0.1.0", default-features = false, features = ["nrf52840", "time-driver-rtc1", "gpiote", "unstable-pac", "unstable-traits"]}
drogue-device = { version = "0.1.0", default-features = false, features = ["time", "dfu", "ble+nrf52840"] }
embassy-boot-nrf = { version = "0.1.0", features = ["softdevice"] }
embassy-boot = { version = "0.1.0" }
embedded-hal = { version = "0.2", features = ["unproven"] }
futures     = { version = "0.3.17", default-features = false, features = ["async-await"] }

nrf-softdevice = { version = "0.1.0", features = ["ble-peripheral", "ble-central", "ble-gatt-server", "s140", "nrf52840"] }
nrf-softdevice-s140 = { version = "0.1.0" }
embedded-storage = "0.3.0"
embedded-storage-async = "0.3.0"

bitflags = { version = "1.3", default-features = false }
lsm6ds33 = "0.2.0"
heapless = "0.7"
cfg-if = "1.0.0"

[features]
default = ["panic-reset"]
gatt = []
lsm = []
mesh = []
defmt = [
      "dep:defmt",
      "defmt-rtt",
      "embassy/defmt",
      "drogue-device/defmt",
      "panic-probe",
      "embassy-boot-nrf/defmt",
      "nrf-softdevice/defmt",
]
log = [
    "dep:log",
    "panic-reset",
]
