[package]
name = "burrboard-dfu"
version = "0.1.0"
edition = "2021"
description = "DFU protocol for BurrBoard USB"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embassy = { version = "0.1.0", default-features = false }
postcard = {  version = "0.7", features = ["defmt"] }
serde = { version = "1", default-features = false, features = ["derive"] }
heapless = "0.7"
defmt = { version = "0.3", optional = true }

[features]
std = []
