[package]
name = "firmware-endpoint"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
serde = {version = "1", features = ["derive"] }
serde_json = "1"
oci-distribution = "0.8"
anyhow = "1"
