[package]
edition = "2021"
name = "burrboard-test"
version = "0.1.0"
authors = ["Ulf Lilleengen <lulf@redhat.com>"]
resolver = "2"

[dependencies]
defmt = "0.3"
defmt-rtt = "0.3"
panic-probe = { version = "0.3", features = ["print-defmt"] }

cortex-m = { version = "0.7", features = ["inline-asm"] }
cortex-m-rt = "0.7"

embassy = { version = "0.1.0", default-features = false, features = ["defmt"] }
embassy-nrf = { version = "0.1.0", default-features = false, features = ["nrf52833", "time-driver-rtc1", "gpiote"]}
futures = { version = "0.3", default-features = false }
bitflags = { version = "1.3", default-features = false }
adxl343 = { version = "0.8.0" }
embedded-hal    = "0.2.6"
accelerometer = { version = "0.12.0" }

[patch.crates-io]
embassy = { git = "https://github.com/embassy-rs/embassy.git", rev = "01af8095fdb3d68026c1748730fb125bcbb31410" }
embassy-nrf = { git = "https://github.com/embassy-rs/embassy.git", rev = "01af8095fdb3d68026c1748730fb125bcbb31410" }
embassy-hal-common = { git = "https://github.com/embassy-rs/embassy.git", rev = "01af8095fdb3d68026c1748730fb125bcbb31410" }
adxl343 = { git = "https://github.com/lulf/ADXL343.rs.git", rev = "1ce0ab973da7f5b2e5134ff0bd71a13aa7637866" }
