[package]
edition = "2021"
name = "burrboard-test"
version = "0.1.0"
authors = ["Ulf Lilleengen <lulf@redhat.com>"]
resolver = "2"

[dependencies]
defmt = "0.3"
defmt-rtt = "0.3"
panic-probe = { version = "0.3", features = ["print-defmt"] }

cortex-m = { version = "0.7", features = ["inline-asm"] }
cortex-m-rt = "0.7"

embassy = { version = "0.1.0", default-features = false, features = ["defmt"] }
embassy-nrf = { version = "0.1.0", default-features = false, features = ["defmt", "nrf52840", "time-driver-rtc1", "gpiote"]}
embedded-hal = { version = "0.2", features = ["unproven"] }

futures = { version = "0.3", default-features = false }
bitflags = { version = "1.3", default-features = false }
adxl343 = { version = "0.8.0" }
accelerometer = { version = "0.12.0" }
heapless = "0.7"

[patch.crates-io]
embassy = { git = "https://github.com/embassy-rs/embassy.git", rev = "0d67ceb066f7b6d3b0163eaa3688b0499439a21c" }
embassy-nrf = { git = "https://github.com/embassy-rs/embassy.git", rev = "0d67ceb066f7b6d3b0163eaa3688b0499439a21c" }
